<resources>
    <string name="app_name">TaskTimer</string>
    <string name="action_settings">Settings</string>
    <string name="mnuTitle_addTask">Add New Task</string>
    <string name="mnutitle_settings">Settings</string>
    <string name="mnutitle_showAbout">About TaskTimer</string>
    <string name="mnutitle_generate">Generate Data</string>
    <string name="mnutitle_showDurations">Durations Report</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="edit_button_cont_desc">Button to Edit Task Details</string>
    <string name="tli_delete_button">Button to delete a task</string>
    <string name="add_edit_name_hint">Enter Task Name (Required)</string>
    <string name="add_edit_desc_hint">Enter Task Description (Optional)</string>
    <string name="add_edit_save">Save Task</string>
    <string name="add_edit_sortorder_hint">Order: Sorts low to high</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with lower sort orders will be placed higher up the list. Tasks with the same sort order will be sorted alphabetically.\n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed).\n\nEach task has Edit and Delete buttons if you want to change the details or remove the task.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting will also delete all timing data associated with task id %1$d: %2$s.</string>
    <string name="cancelEditDiag_message">You have unsaved changes. Do you want to abandon your changes, or continue editing</string>
    <string name="cancelEditDiag_pos_caption">Abandon changes</string>
    <string name="cancelEditDiag_neg_caption">continue editing</string>
    <string name="about_copyright">Copyright © 2020 learnprogramming.academy</string>
    <string name="about_weblink">Instructions available at www.learnprogramming.academy</string>
    <string name="about_email">For support, email tasktimer@learnprogramming.academy</string>
    <string name="about_credits">icon derived from <b>analog clock</b> at openclipart.org by <b>Anonymous</b></string>
</resources>
