<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tasktimer.MainActivity">
    <item
        android:id="@+id/mnumain_addTask"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10"
        android:title="@string/mnuTitle_addTask"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnumain_showDurations"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="20"
        android:title="@string/mnutitle_showDurations"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnumain_settings"
        android:orderInCategory="30"
        android:title="@string/mnutitle_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnumain_showAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="40"
        android:title="@string/mnutitle_showAbout"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnumain_generate"
        android:orderInCategory="50"
        android:title="@string/mnutitle_generate"
        android:visible="false"
        app:showAsAction="never" />
</menu>
